@@ -1,6 +1,7 @@
 Revision history for WWW-ORCID
 
 {{$NEXT}}
+  -make client credentials optional for the public api
 
 0.0402  2019-06-21 14:28:13 CEST
   - fix typo in pod
